.sln file converted to Visual Studio 2017 format [3]

--- a/source/vcpp/cube.vcxproj
+++ b/source/vcpp/cube.vcxproj
@@ -165,6 +165,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
+      <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
     </Link>
     <PostBuildEvent>
       <Command>copy /Y "$(ProjectDir)$(OutDir)*.pdb" "$(TargetDir).."</Command>
