--- a/source/codeblocks/AssaultCube.cbp
+++ b/source/codeblocks/AssaultCube.cbp
@@ -3,8 +3,8 @@
 	<FileVersion major="1" minor="6" />
 	<Project>
 		<Option title="AssaultCube" />
+		<Option platforms="Windows;" />
 		<Option pch_mode="2" />
-		<Option default_target="default" />
 		<Option compiler="gcc" />
 		<MakeCommands>
 			<Build command="cd ../src;$make -f $makefile $target" />
@@ -19,7 +19,7 @@
 				<Option output="../../bin_win32/acr_client.exe" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="../../" />
 				<Option object_output=".objs/default" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="gcc" />
 				<Option parameters="--home=data --mod=acr --init " />
 				<Option projectResourceIncludeDirsRelation="1" />
@@ -27,6 +27,7 @@
 					<Add option="-fomit-frame-pointer" />
 					<Add option="-w" />
 					<Add option="-Ofast" />
+					<Add option="-DWIN32" />
 				</Compiler>
 				<ResourceCompiler>
 					<Add directory="../vcpp" />
@@ -44,7 +45,7 @@
 					<Add library="libvorbisfile" />
 					<Add library="jpeg" />
 					<Add library="libintl" />
-					<Add library="curldll" />
+					<Add library="libcurl" />
 					<Add library="ws2_32" />
 					<Add library="winmm" />
 					<Add directory="../lib" />
@@ -54,7 +55,7 @@
 				<Option output="../../bin_win32/acr_client.exe" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="../../" />
 				<Option object_output=".objs/debug" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="gcc" />
 				<Option parameters="--home=data --mod=acr --init " />
 				<Option projectResourceIncludeDirsRelation="1" />
@@ -63,6 +64,7 @@
 					<Add option="-Wall" />
 					<Add option="-ggdb3" />
 					<Add option="-O0" />
+					<Add option="-DWIN32" />
 					<Add option="-D_DEBUG" />
 				</Compiler>
 				<ResourceCompiler>
@@ -80,7 +82,7 @@
 					<Add library="libvorbisfile" />
 					<Add library="jpeg" />
 					<Add library="libintl" />
-					<Add library="curldll" />
+					<Add library="libcurl" />
 					<Add library="ws2_32" />
 					<Add library="winmm" />
 					<Add directory="../lib" />
@@ -570,6 +572,9 @@
 		<Unit filename="../src/zip.cpp">
 			<Option target="client" />
 			<Option target="client-debug" />
+		</Unit>
+		<Unit filename="cube.rc">
+			<Option compilerVar="WINDRES" />
 		</Unit>
 		<Extensions>
 			<code_completion />
