default resolution changed to 1920x1080 debug with 1024x768 windowed, release with 1920x1080 fullscreen in CodeBlocks

--- a/source/codeblocks/AssaultCube.cbp
+++ b/source/codeblocks/AssaultCube.cbp
@@ -21,6 +21,7 @@
 				<Option object_output=".objs/default" />
 				<Option type="0" />
 				<Option compiler="gcc" />
+				<Option parameters="-t1 -w1920 -h1080" />
 				<Option projectResourceIncludeDirsRelation="1" />
 				<Compiler>
 					<Add option="-fomit-frame-pointer" />
@@ -56,6 +57,7 @@
 				<Option object_output=".objs/debug" />
 				<Option type="0" />
 				<Option compiler="gcc" />
+				<Option parameters="-t0 -w1024 -h768" />
 				<Option projectResourceIncludeDirsRelation="1" />
 				<Compiler>
 					<Add option="-Wextra" />
